test_suite/tests/ui/expected-string/character.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(rename = 'a')]
    character: (),
}

fn main() {}
